# stm32-cmake-bootloader-template

./: CMakeLists.txt  README.md  autobuild-script.bat  flash_all.bat
APPLICATION/: CMakeLists.txt  STM32F411VETX_FLASH.ld
APPLICATION/Core/Src/: main.c
BOOTLOADER/: CMakeLists.txt  STM32F411VETX_FLASH.ld
BOOTLOADER/Core/Src/: main.c
